Retrieve current user information
