# Saitynas_API/Models/UserEntity/DTO/UserDTO.cs
@@ -4,22 +4,18 @@ namespace Saitynas_API.Models.UserEntity.DTO
 {
     public class UserDTO
     {
-        // [JsonProperty("firstName")]
-        // public string FirstName { get; set; }
-        //
-        // [JsonProperty("lastName")]
-        // public string LastName { get; set; }
-        
-        // [JsonProperty("birthDate")]
-        // public string BirthDate { get; set; }
+        [JsonProperty("email")]
+        public string Email { get; set; }
+
+        [JsonProperty("registrationDate")]
+        public string RegistrationDate { get; set; }
 
         public UserDTO() { }
 
         public UserDTO(User u)
         {
-            // FirstName = u.FirstName;
-            // LastName = u.LastName;
-            // BirthDate = u.BirthDate.ToString("O");
+            Email = u.Email;
+            RegistrationDate = u.RegistrationDate.ToString("O");
         }
     }
 }
